# omy

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  omy.xml  package.xml  robot.urdf  scene.xml
admittnace /: DESK.py  desk.py  omy2_admittance_control.py  omy_admittance_control.py  omy_control.py  run_ik_trajectory_control.py  run_ik_trajectory_control.py.py  run_trajectory_control.py  trajectory_generator.py  trajectory_generator_cartesian.py  unified_admittance_trajectory_control.py
config/: control.yaml
impedance/: config.py  control.py  estimate.py  io_dxl.py  main.py  model_pin.py  mujoco_test.py  omy.urdf  omy.xml  utils.py
impedance/mujoco_test_impedance/: impe_mujoco.py  omy.xml
launch/: omy.launch.py
